# DevSupport-AI-

./: README.md  docker-compose.yml
DevSupport-AI-main/: Makefile
DevSupport-AI-main/backend/: .env.example  pyproject.toml
DevSupport-AI-main/backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  security.py
DevSupport-AI-main/backend/app/agents/: api_diagnostic.py  billing.py  doc_rag.py  intent_router.py  security.py  state.py  supervisor.py  ticket.py  util.py
DevSupport-AI-main/backend/app/api/: auth.py  chat.py  conversations.py  docs.py  eval.py  tickets.py  traces.py  workbench.py
DevSupport-AI-main/backend/app/cache/: redis_client.py  route_cache.py  semantic_cache.py
DevSupport-AI-main/backend/app/guardrail/: desensitize.py  fallback.py
DevSupport-AI-main/backend/app/llm/: client.py  router.py
DevSupport-AI-main/backend/app/memory/: session.py
DevSupport-AI-main/backend/app/observability/: cost.py  trace.py
DevSupport-AI-main/backend/app/rag/: compressor.py  ingest.py  reranker.py  retriever.py  store.py
DevSupport-AI-main/backend/app/schemas/: auth.py  chat.py
DevSupport-AI-main/backend/app/tools/: apikey.py  billing_tools.py  logs.py  registry.py  ticket_tools.py
DevSupport-AI-main/backend/benchmark/: loadtest.py
DevSupport-AI-main/backend/devsupport_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
DevSupport-AI-main/backend/eval/: __init__.py  dataset.jsonl  run_eval.py  security_set.jsonl
DevSupport-AI-main/backend/scripts/: ingest_knowledge.py  init_db.py  seed_data.py
(+22 files in other folders)
