[project]
name = "devsupport-ai-backend"
version = "0.1.0"
description = "DevSupport AI - 面向 API 开放平台的多 Agent 智能技术支持系统"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1,<3",
    # 配置与校验
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # 数据库
    "sqlalchemy>=2.0.30",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    # 缓存 / 会话
    "redis>=5.0.0",
    # 向量库
    "pymilvus>=2.4.0",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # LLM / Embedding / Rerank（通义 DashScope）
    "openai>=1.40.0",
    "dashscope>=1.20.0",
    # RAG 检索
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    # Agent 编排
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # 工具
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "locust>=2.31.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
